--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
 <h1>You are in the home page!!</h1>
-<button class="btn btn-success"></button>
+
+<%= link_to yachts_path do%>
+<button class="btn btn-success">Click here to go to our boats</button>
+<% end %>
