--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,24 @@
-<h1>You are in the home page!!</h1>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://yachtcharters.rentals/wp-content/uploads/2018/05/home-banner.jpg);">
+  <div class="container">
+    <div class= "row align-items-center m-0 p-0">
+      <h1 id="banner-typed-text"></h1>
+    </div>
+    <p>Live a life of luxury and pleasure.</p>
+    <%= link_to yachts_path do%>
+    <button class="btn btn-flat btn-success">Rent now</button>
+    <% end %>
+  </div>
+</div>
+<div class="container-sm">
+  <div class="row mt-4">
+    <h1>Our story</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,
+    </p>
+  </div>
+</div>
+<div class="row justify-content-center mb-4">
+  <button class="btn btn-lg btn-success"><%= link_to "Rent now", yachts_path, style: "color: inherit;" %></button>
+</div>
 
-<%= link_to yachts_path do%>
-<button class="btn btn-success">Click here to go to our boats</button>
-<% end %>
+<%= render "footer" %>
