--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,32 @@
 // Import page-specific CSS files here.
 @import "home";
+
+body{
+  margin: 0;
+  padding: 0;
+}
+
+.yacht-container{
+  margin-top: 50px;
+  width: 80%;
+}
+
+.page-title{
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.col-3{
+  margin-bottom: 20px;
+}
+
+.card{
+  border-radius: 8px;
+  border: none;
+  box-shadow: 2px 2px 10px rgba($color: #dedede22, $alpha: 1.0);
+}
+
+.card-img-top{
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
