--- a/app/views/yachts/index.html.erb
+++ b/app/views/yachts/index.html.erb
@@ -1,25 +1,21 @@
+<div class="yacht-container container-fluid">
+  <h2 class="page-title">ALL OF OUR YATCHS</h2>
 
-<ul class="list-unstyled">
-  <% @yachts.each do |yacht| %>
-    <li><%= link_to yacht.name, yacht_path(yacht) %></li>
-    <li><%= yacht.description %></li>
-    <li><%= yacht.capacity %></li>
-    <li><%= yacht.location %></li>
-    <li><img src="<%= yacht.image_url %>" alt=""></li>
-    <br>
-  <% end %>
-</ul>
-
-<div class="container-sm">
-  <h2>Yachts list</h2>
-
-  <ul class="list-unstyled">
-    <li>Name</li>
-    <li>Description</li>
-    <li>Capacity</li>
-    <li>Location</li>
-    <li>Name</li>
-  </ul>
+  <div class="row justify-content-center">
+      <% @yachts.each do |yacht| %>
+      <div class="col-12 col-lg-4 col-xl-3">
+        <div class="card" style="">
+            <img src="<%= yacht.image_url %>" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"><%= link_to yacht.name, yacht_path(yacht) %></h5>
+              <p class="card-text"><%= yacht.description %></p>
+              <p class="card-text"><%= yacht.capacity %></p>
+              <a href="<% link_to yacht.name, yacht_path(yacht) %>" class="btn btn-primary">View</a>
+            </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
 
   <p class="btn btn-info mr-1"><%= link_to "Go back", root_path %></p>
 </div>
