--- a/app/views/yachts/show.html.erb
+++ b/app/views/yachts/show.html.erb
@@ -1,36 +1,27 @@
-  <%# container of the page %>
-  <div class="container mb-5">
-    <div class="d-flex justify-content-between my-4">
-      <span class="mb-2 d-block"><small><em class="text-muted"><%= "" if @list.movies.empty? %></em></small></span>
-<%# button to add and delete %>
-      <div class="Reservation-btn">
-        <%= link_to 'add a movie', new_list_bookmark_path(@list), class: 'btn btn-flat' %>
+<%# container of the page %>
+<div class="container">
+    <%# container for the image,name and description  %>
+    <div class="bg-white rounded shadow" id="card" >
+    <%# container for image and name %>
+      <div class="poster">
+        <%= image_tag @yacht.image_url, alt: @yacht.name %>
       </div>
+      <%# name, address %>
+      <div class="description-box">
+        <strong><h2><%= @yacht.name %> </h2> <span class="text-muted font-weight-normal"> <p>•Capacity:</p><%= @yacht.capacity %></span></strong>
+        <small class="text-muted"> <p class="mb-0">•Location:</p><%= @yacht.location %></small>
+        <div>
+          <i class="fas fa-angle-double-right"></i> <small class="flex-grow-1"><%= @yacht.description%></small>
+        </div>
+    </div>
+    <%# reservation button %>
+    <div class="">
+      <a href="#" class="reservation-button">Reserve Now</a>
     </div>
 
-  <div class="row my-2">
-    <% @list.yachts.each do |yacht| %>
-      <% booking  = Booking.find_by(yacht :yacht) %>
-      <div class="col-12 col-sm-6 mb-4" data-aos="zoom-in" id="posters">
-        <div class="bg-white rounded shadow h-100" >
-          <div id="poster">
-            <%= image_tag movie.poster_url, alt: movie.title, class: 'movie-img rounded-top' %>
-          </div>
-
-
-          <div class="p-3 rounded-bottom d-flex flex-column">
-            <strong><%= movie.title %> <span class="text-muted font-weight-normal">• <%= movie.rating %> <i class="fas fa-star star-yellow"></i></span></strong>
-            <small class="text-muted"><%= movie.overview %></small>
-
-            <div class="d-flex align-items-end justify-content-between pt-4">
-              <div>
-                <i class="fas fa-quote-left mr-2"></i><small class="flex-grow-1"><%= bookmark.comment %></small>
-              </div>
-
-              <small class="text-right flex-shrink-0"><%= link_to 'delete', bookmark_path(bookmark), method: :delete, data: { confirm: "Are you sure you want to remove #{movie.title} from your #{@list.name} list"}, class: 'text-danger' %></small>
-            </div>
-          </div>
-        </div>
-      </div>
-    <% end %>
+  </div>
 </div>
+
+
+
+              <%# <small class="text-right flex-shrink-0"><%= link_to '####',------_path(), method: :reserve</small> %>
