--- a/app/views/yachts/show.html.erb
+++ b/app/views/yachts/show.html.erb
@@ -8,15 +8,15 @@
       </div>
       <%# name, address %>
       <div class="description-box">
-        <strong><h2><%= @yacht.name %> </h2> <span class="text-muted font-weight-normal"> <p>•Capacity:</p><%= @yacht.capacity %></span></strong>
-        <small class="text-muted"> <p class="mb-0">•Location:</p><%= @yacht.location %></small>
+        <strong><h2><%= @yacht.name %> </h2> <span class="text-muted font-weight-normal"> <p class="mb-0 ">•Capacity:</p><%= @yacht.capacity %></span></strong>
+        <small class="text-muted"> <p class="mb-0 mt-2">•Location:</p><%= @yacht.location %></small>
         <div>
           <i class="fas fa-angle-double-right"></i> <small class="flex-grow-1"><%= @yacht.description%></small>
         </div>
-    </div>
+    </div class="">
     <%# reservation button %>
-    <div class="">
-      <a href="#" class="reservation-button">Reserve Now</a>
+    <div class="space-button">
+      <a href="#" class="reservation-button btn btn-primary">Reserve Now</a>
     </div>
 
   </div>
