change and removed button text decoration

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
   </div>
 </div>
 <div class="row justify-content-center mb-4">
-  <button class="btn btn-lg btn-success"><%= link_to "Rent now", yachts_path, style: "color: inherit;" %></button>
+  <button class="btn btn-lg btn-success"><%= link_to "Rent now", yachts_path, style: "color: inherit; text-decoration: inherit" %></button>
 </div>
 
 <%= render "footer" %>
