added footer to pages and devise views

--- a/app/views/yachts/show.html.erb
+++ b/app/views/yachts/show.html.erb
@@ -22,6 +22,8 @@
   </div>
 </div>
 
+<%= render "footer" %>
+
 
 
               <%# <small class="text-right flex-shrink-0"><%= link_to '####',------_path(), method: :reserve</small> %>
