--- a/app/assets/stylesheets/yachts/_show.scss
+++ b/app/assets/stylesheets/yachts/_show.scss
@@ -9,10 +9,10 @@
   text-decoration: none;
 
 }
-.reservation-button {
-  background-color: blue;
-  text-decoration: none;
-  padding: 8px 10px;
-  border-radius: 8px;
-  color: blanchedalmond ;
-}
+// .reservation-button {
+//   background-color: blue;
+//   text-decoration: none;
+//   padding: 8px 10px;
+//   border-radius: 8px;
+//   color: blanchedalmond ;
+// }
