--- a/app/views/yachts/index.html.erb
+++ b/app/views/yachts/index.html.erb
@@ -4,13 +4,15 @@
   <div class="row justify-content-center">
       <% @yachts.each do |yacht| %>
       <div class="col-12 col-lg-4 col-xl-3">
-        <div class="card" style="">
+        <div class="card">
             <img src="<%= yacht.image_url %>" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"><%= link_to yacht.name, yacht_path(yacht) %></h5>
-              <p class="card-text"><%= yacht.description %></p>
-              <p class="card-text"><%= yacht.capacity %></p>
-              <a href="<% link_to yacht.name, yacht_path(yacht) %>" class="btn btn-primary">View</a>
+              <p class="card-text"><strong>Description:</strong> <%= yacht.description %></p>
+              <div class="card-bottom d-flex justify-content-between">
+                <p class="card-text"><strong>Capacity:</strong> <%= yacht.capacity %></p>
+                <p class="card-button btn btn-primary"><%= link_to "View", yacht_path(yacht) %></p>
+              </div>
             </div>
         </div>
       </div>
