--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -16,17 +16,47 @@ body{
   margin-bottom: 50px;
 }
 
+.card-title{
+  font-size: 13px;
+  font-weight: bold;
+}
+
 .col-3{
   margin-bottom: 20px;
 }
 
+.card-button{
+  font-size: 10px;
+  margin-bottom: 0;
+}
+
+.card-button a{
+  color: white;
+}
+
 .card{
+  margin-bottom: 30px;
   border-radius: 8px;
   border: none;
+  font-size: 12px;
   box-shadow: 2px 2px 10px rgba($color: #dedede22, $alpha: 1.0);
+  height: 50vh;
+  overflow: hidden;;
 }
 
 .card-img-top{
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
+  object-fit: cover;
+  object-position: center;
+  height: 30%;
+}
+
+.card-bottom{
+  align-items: center;
+  margin-top: 1rem;
+}
+
+.card-text{
+  margin-bottom: 0;
 }
