--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -34,13 +34,14 @@ body{
   color: white;
 }
 
+// Yacht Card Style
 .card{
   margin-bottom: 30px;
   border-radius: 8px;
   border: none;
   font-size: 12px;
   box-shadow: 2px 2px 10px rgba($color: #dedede22, $alpha: 1.0);
-  height: 50vh;
+  height: 40vh;
   overflow: hidden;;
 }
 
