--- a/app/assets/stylesheets/yachts/_show.scss
+++ b/app/assets/stylesheets/yachts/_show.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: auto;
   text-align: center;
+  margin-bottom: 40px;
 }
 
 .space-button{
@@ -15,4 +16,12 @@
   padding: 8px 10px;
   border-radius: 8px;
   color: blanchedalmond ;
+}
+#card {
+  padding: 8px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+.description {
+  font-size: 16px;
 }
