--- a/app/views/yachts/show.html.erb
+++ b/app/views/yachts/show.html.erb
@@ -10,7 +10,7 @@
       <div class="description-box">
         <strong><h2><%= @yacht.name %> </h2> <span class="text-muted font-weight-normal"> <p class="mb-0 ">•Capacity:</p><%= @yacht.capacity %></span></strong>
         <small class="text-muted"> <p class="mb-0 mt-2">•Location:</p><%= @yacht.location %></small>
-        <div>
+        <div class="description">
           <i class="fas fa-angle-double-right"></i> <small class="flex-grow-1"><%= @yacht.description%></small>
         </div>
     </div class="">
