added new container

--- a/app/views/yachts/show.html.erb
+++ b/app/views/yachts/show.html.erb
@@ -1,26 +1,39 @@
 <%# container of the page %>
-<div class="container">
-    <%# container for the image,name and description  %>
-    <div class="bg-white rounded shadow" id="card" >
-    <%# container for image and name %>
-      <div class="poster">
-        <%= image_tag @yacht.image_url, alt: @yacht.name %>
-      </div>
+<div class="container cl-12">
+  <%# container for the image,name and description  %>
+  <div class="bg-white rounded shadow" id="card" >
+      <%# container for image and name %>
+    <div class="poster">
+      <%= image_tag @yacht.image_url, alt: @yacht.name %>
+    </div>
       <%# name, address %>
-      <div class="description-box">
-        <strong><h2><%= @yacht.name %> </h2> <span class="text-muted font-weight-normal"> <p class="mb-0 ">•Capacity:</p><%= @yacht.capacity %></span></strong>
-        <small class="text-muted"> <p class="mb-0 mt-2">•Location:</p><%= @yacht.location %></small>
-        <div class="description">
-          <i class="fas fa-angle-double-right"></i> <small class="flex-grow-1"><%= @yacht.description%></small>
-        </div>
-    </div class="">
-    <%# reservation button %>
-    <div class="space-button">
-      <a href="#" class="reservation-button btn btn-primary">Reserve Now</a>
+    <div class="description-box">
+      <strong><h2><%= @yacht.name %> </h2> <span class="text-muted font-weight-normal"> <p class="mb-0 ">•Location:</p><%= @yacht.location %></span></strong>
+      <small class="text-muted"> <p class="mb-0 mt-2">•Capacity:</p><%= @yacht.capacity %></small>
+      <div class="description">
+          <p class="flex-grow-1" id="description"><i class="fas fa-angle-double-right"></i> <%= @yacht.description%></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="bg-white rounded shadow" id="reservation-box">
+    <%# div for calendar %>
+    <div>
+      <%# form for calendar should be here %>
     </div>
 
+    <div>
+      <%# reservation button and back button %>
+      <div class="space-button">
+          <%= link_to yachts_path, class: "back-button btn btn-danger" do  %>
+        Back
+        <% end %>
+        <a href="#" class="reservation-button btn btn-primary">Reserve Now</a>
+      </div>
+    </div>
   </div>
 </div>
+
 
 <%= render "footer" %>
 
