--- a/app/assets/stylesheets/yachts/_show.scss
+++ b/app/assets/stylesheets/yachts/_show.scss
@@ -1,8 +1,12 @@
 .container {
-  width: 100%;
-  height: auto;
+  width: auto;
+  height: 100%;
   text-align: center;
-  margin-bottom: 40px;
+  margin-top: 40px;
+  margin-bottom: 60px;
+  display: inline-flex;
+  margin-left: 40px;
+
 }
 
 .space-button{
@@ -22,7 +26,25 @@
   padding: 8px;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
+  position: relative;
 }
-.description {
-  font-size: 16px;
+.description-box {
+  font-size: 20px;
+}
+#description {
+  font-family: 'M PLUS Code Latin', sans-serif;
+}
+#reservation-box {
+  background-color: white;
+  float: left;
+  size: 100%;
+  position: relative;
+}
+
+
+.back-button {
+  text-decoration: none;
+  padding: 8px 16px;
+  border-radius: 8px;
+  color: blanchedalmond ;
 }
