--- a/app/views/yachts/index.html.erb
+++ b/app/views/yachts/index.html.erb
@@ -1,9 +1,13 @@
-<div class="yacht-container container-fluid">
-  <h2 class="page-title">ALL OF OUR YATCHS</h2>
+<video autoplay muted loop id="myVideo">
+  <source src="/../../assets/videos/background_video.mp4" type="video/mp4">
+</video>
 
-  <div class="row justify-content-center">
+<div class="yacht-container container-fluid">
+  <h3 class="page-title">ALL OF OUR YATCHS</h3>
+
+  <div class="row justify-content-evenly">
       <% @yachts.each do |yacht| %>
-      <div class="col-12 col-lg-4 col-xl-3">
+      <div class="col-6 col-lg-4 col-xl-3">
         <div class="card">
             <img src="<%= yacht.image_url %>" class="card-img-top" alt="...">
             <div class="card-body">
@@ -18,8 +22,6 @@
       </div>
     <% end %>
   </div>
-
-  <p class="btn btn-info mr-1"><%= link_to "Go back", root_path %></p>
 </div>
 
 <%= render "footer" %>
