--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -4,6 +4,7 @@
 body{
   margin: 0;
   padding: 0;
+  background-color: white;
 }
 
 .yacht-container{
@@ -12,7 +13,7 @@ body{
 }
 
 .page-title{
-  text-align: center;
+  text-align: left;
   margin-bottom: 50px;
 }
 
@@ -41,7 +42,7 @@ body{
   border: none;
   font-size: 12px;
   box-shadow: 2px 2px 10px rgba($color: #dedede22, $alpha: 1.0);
-  height: 40vh;
+  height: 35vh;
   overflow: hidden;;
 }
 
@@ -50,7 +51,7 @@ body{
   border-top-right-radius: 8px;
   object-fit: cover;
   object-position: center;
-  height: 30%;
+  height: 40%;
 }
 
 .card-bottom{
@@ -59,5 +60,30 @@ body{
 }
 
 .card-text{
+  display: -webkit-box;
+  max-width: 200px;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
   margin-bottom: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+/* Style the video: 100% width and height to cover the entire window */
+#myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+/* Add some content at the bottom of the video/page */
+.content {
+  position: fixed;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px;
 }
