--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,11 +1,13 @@
 .footer {
-  background: #8DC1CF;
+  background: #ffffff;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.6);
+  box-shadow: 0 -1px 5px rgb(205, 205, 205);
+
 }
 .footer-links {
   display: flex;
