--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,15 @@
 // Specific CSS for your home-page
+.home-card-container{
+  padding: 0;
+  margin: 5vh 5% 5vh 5%;
+}
+
+.home-card{
+  margin: 0;
+  padding: 0;
+  width: 49%;
+  height: 90vh;
+  background-size: cover;
+  background-position: center;
+  border-radius: 12px;
+}
