--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,23 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://yachtcharters.rentals/wp-content/uploads/2018/05/home-banner.jpg);">
   <div class="container">
-    <div class= "row align-items-center m-0 p-0">
-      <h1 id="banner-typed-text"></h1>
+    <div class= "row align-items-center m-0 p-0" style="color:white;">
+      <h1 class="mb-2" id="banner-typed-text"></h1>
     </div>
-    <p>Live a life of luxury and pleasure.</p>
-    <%= link_to yachts_path do%>
-    <button class="btn btn-flat btn-success">Rent now</button>
-    <% end %>
+    <div class="row flex-column align-items-start ml-0">
+      <p class="m-0 p-0">Live a life of luxury and pleasure.</p>
+      <%= link_to yachts_path, class:"m-0 p-0" do%>
+      <button class="btn btn-flat btn-success">Rent now</button>
+      <% end %>
+    </div>
   </div>
 </div>
-<div class="container-sm">
+<div class="home-card-container">
   <h2>Discover Oceanbnb Experience</h2>
-  <div class="row mt-4">
-    <div class="col-12 col-md-6">
+  <div class="row justify-content-between">
+    <div class="home-card" style="background-image: url(<%= image_path "home_card"%>);">
+
+    </div>
+    <div class="home-card" style="background-image: url(<%= image_path "home_card2"%>);">
 
     </div>
   </div>
