--- a/app/views/yachts/index.html.erb
+++ b/app/views/yachts/index.html.erb
@@ -1,22 +1,24 @@
 <%# <%= video_tag "background_video_3.mp4", autoplay: :autoplay, loop: :loop, muted: :muted, class: "myVideo" %>
 
 <div class="yacht-container container-fluid">
-  <h3 class="page-title">Discover all of our Yachts</h3>
+<h3 class="page-title">Discover all of our Yachts</h3>
 
-  <div class="row justify-content-evenly">
-      <% @yachts.each do |yacht| %>
-      <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-        <div class="card">
-            <img src="<%= yacht.image_url %>" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title"><%= link_to yacht.name, yacht_path(yacht) %></h5>
-              <p class="card-text"><strong>Description:</strong> <%= yacht.description %></p>
-              <div class="card-bottom d-flex justify-content-between">
-                <p class="card-text"><strong>Price per day: €</strong><%= yacht.price %></p>
-                <p class="card-button btn btn-primary"><%= link_to "View", yacht_path(yacht) %></p>
-              </div>
+<div class="row justify-content-evenly">
+    <% @yachts.each do |yacht| %>
+    <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+      <div class="card">
+          <img src="<%= yacht.image_url %>" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"><%= link_to yacht.name, yacht_path(yacht) %></h5>
+            <p class="card-text"><strong>Description:</strong> <%= yacht.description %></p>
+            <div class="card-bottom d-flex justify-content-between">
+              <p class="card-text"><strong>Price per day: €</strong><%= yacht.price %></p>
+              <%= link_to yacht_path(yacht) do %>
+                <p class="card-button btn btn-primary">View</p>
+              <% end %>
             </div>
-        </div>
+          </div>
+      </div>
       </div>
     <% end %>
   </div>
@@ -24,3 +26,4 @@
 
 
 <%= render "footer" %>
+
