--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -17,5 +17,33 @@
     %>
 
     <div class="profile_page container">
-      
+
+
     </div>
+
+
+<%# <%= video_tag "background_video_3.mp4", autoplay: :autoplay, loop: :loop, muted: :muted, class: "myVideo" %>
+
+<div class="profile-container container-fluid">
+<h3 class="page-title">Welcome to your profile</h3>
+
+<div class="row justify-content-evenly">
+    <% @users.each do |user| %>
+    <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+      <div class="card">
+          <div class="card-body">
+            <h5 class="card-title"><%= link_to user.first_name, user_path(user) %></h5>
+            <p class="card-text"><%= user.last_name %></p>
+            <p class="card-text"><%= user.email %></p>
+            <p class="card-text"><%= user.phone_number %></p>
+            <p class="card-text"><%= user.location %></p>
+            </div>
+          </div>
+      </div>
+      </div>
+    <% end %>
+  </div>
+</div>
+
+
+<%= render "footer" %>
