--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,12 +1,12 @@
 // Specific CSS for your home-page
 .home-card-container{
   padding: 0;
-  margin: 6vh 5% 5vh 5%;
+  margin: 9vh 5% 5vh 5%;
 }
 
 .home-card{
   margin: 5vh 0 0 0;
-  padding: 2%;
+  padding: 7%;
   width: 49%;
   height: 90vh;
   background-size: 120%;
@@ -17,5 +17,32 @@
 }
 
 .home-card-header{
-  font-size: 34px;
+  line-height: 50px;
+  width: 70%;
+  height: 100vh;
+  font-size: 50px;
+  font-weight: normal;
+}
+.home-card-button{
+  margin-top: 15px;
+  padding: 14px 24px;
+  background-color: white;
+  border-radius: 12px;
+  box-shadow: 0 0 3px rgba(0,0,0,0.2);
+}
+@media(max-width: 900px) {
+  .home-card{
+    width: 100%;
+  }
+}
+@media(max-width: 750px) {
+  .home-card{
+    height: 80vh;
+  }
+}
+@media(max-width: 500px) {
+.home-card{
+  width: 100%;
+  height: 70vh;
+}
 }
