--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,8 +9,7 @@
   padding: 7%;
   width: 49%;
   height: 90vh;
-  background-size: 120%;
-  background-position: 0% 50%;
+  background-size: cover;
   border-radius: 12px;
   color: white;
   font-weight: bolder;
@@ -18,8 +17,6 @@
 
 .home-card-header{
   line-height: 50px;
-  width: 70%;
-  height: 100vh;
   font-size: 50px;
   font-weight: normal;
 }
@@ -30,6 +27,7 @@
   border-radius: 12px;
   box-shadow: 0 0 3px rgba(0,0,0,0.2);
 }
+
 @media(max-width: 900px) {
   .home-card{
     width: 100%;
@@ -41,8 +39,8 @@
   }
 }
 @media(max-width: 500px) {
-.home-card{
-  width: 100%;
-  height: 70vh;
-}
+  .home-card{
+    width: 100%;
+    height: 70vh;
+  }
 }
