--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,8 +1,13 @@
-<h2>Forgot your password?</h2>
+
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
 
+<h4 class="form-title">Forgot your password?</h4>
+<div class="form-container container-fluid">
+<h4 class="form-subtitle">Recover your information</h4>
+  <div class="row">
+    <div class="col">
   <div class="form-inputs">
     <%= f.input :email,
                 required: true,
@@ -11,8 +16,10 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
+    <div class="button"><%= f.button :submit, "Send me the reset password instructions" %></div>
+    <div class="render"><%= render "devise/shared/links" %></div>
   </div>
-<% end %>
+  </div>
+  </div>
 
-<%= render "devise/shared/links" %>
+<% end %>
