--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
-<h4 class="form-title">Log In or Register</h4>
+<h4 class="form-title">Register</h4>
 <div class="form-container container-fluid">
 <h4 class="form-subtitle">Welcome to Oceanbnb!</h4>
   <div class="row">
@@ -35,10 +35,11 @@
     </div>
   </div>
   <div class="form-actions">
-    <div class="button"><%= f.button :submit, "Sign up" %></div>
-    <div class="render"><%= render "devise/shared/links" %></div>
+    <button type="button" class="btn btn-primary"><%= f.button :submit, "Sign up" %></button>
+    <button type="button render" class="btn btn-primary"><%= render "devise/shared/links" %></button>
   </div>
 </div>
+
 
 
 <% end %>
