--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,20 +13,20 @@
   <h1 style="font-family: Inter">Discover Oceanbnb Experience</h1>
 
   <div class="row justify-content-between">
-    <div class="home-card" style="background-image: url(<%= image_path "home_card"%>);">
+    <div class="home-card" style="background-image: url(https://res.cloudinary.com/dnxriaa8a/image/upload/v1637081233/home_card_kc7rhy.jpg);">
       <div class="home-card-header">Things to do on your trip</div>
       <%= link_to yachts_path, class:"m-0 p-0" do%>
         <div class="btn btn-light home-card-button">Experiences</div>
       <% end %>
     </div>
 
-    <div class="home-card" style="background-image: url(<%= image_path "home_card2"%>);">
+    <div class="home-card" style="background-image: url(https://res.cloudinary.com/dnxriaa8a/image/upload/v1637081233/home_card2_slmobq.jpg);">
       <div class="home-card-header">Things to do from home</div>
       <%= link_to yachts_path, class:"m-0 p-0" do%>
         <div class="btn btn-light home-card-button">Online Experiences</div>
       <% end %>
     </div>
-    
+
   </div>
 
 </div>
