--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar sticky-top navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to  root_path, class: "navbar-brand" do %>
-    <%= image_tag "logo_oceanbnb" %>
+    <img src="https://res.cloudinary.com/dnxriaa8a/image/upload/v1637081784/logo_oceanbnb_ufxktn.png" alt="logo">
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
