--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -17,48 +17,83 @@
 <%# <%= video_tag "background_video_3.mp4", autoplay: :autoplay, loop: :loop, muted: :muted, class: "myVideo" %>
 
 <%# main container %>
-<div class="profile-container container-fluid" id="profile">
-  <h2 class="page-title">Welcome <strong><%= @user.first_name.capitalize %></strong> to your profile</h2>
+<div class="profile-container " id="profile">
+  <h2 class="page-head">Welcome <strong><%= @user.first_name.capitalize %></strong> to your profile</h2>
   <%# card container %>
-  <div class="row justify-content-evenly" >
-    <% @users.each do |user| %>
+
+  <div class="page">
     <div class="col-12 col-md-6 col-lg-4 col-xl-3">
       <div class="card" id="user-details">
-          <div class="card-body">
-            <p class="card-text">First Name: <%= user.first_name %></p>
-            <p class="card-text">Last Name: <%= user.last_name %></p>
-            <p class="card-text">Email: <%= user.email %></p>
-            <p class="card-text">Country: <%= user.location %></p>
-            </div>
+        <div class="card-body">
+          <p class="card-text">First Name:  <%= @user.first_name %></p>
+          <p class="card-text">Last Name: <%= @user.last_name %></p>
+          <p class="card-text">Email: <%= @user.email %></p>
+          <p class="card-text">Country: <%= @user.location %></p>
+          <%# button edit %>
+          <div class="edit-btn">
+            <%= link_to edit_user_registration_path do%>
+            <button class="btn btn-flat btn-primary">edit</button>
+            <% end %>
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="row justify-content-evenly">
-        <div class="card" id="user-history">
-          <p>Your rental history:</p>
-          <ol>
-            <li>hesklfgpidshgaoehguihf</li>
-            <li>asdfñodhiWHFIUWDHGASDASD</li>
-            <li>asfnshoghaeoñgñogadsgvbsb</li>
-            <li>sgñbihsdagjfohgowijgihguir</li>
-          </ol>
-        </div>
+    <div class="card" id="user-history" style="overflow-y: scroll;">
+      <p> <strong>Your rental history: </strong></p>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Reciept number</th>
+            <th scope="col">Date</th>
+            <th scope="col">Amount</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>This will be a link######################</td>
+            <td>dd/mm/yyyy</td>
+            <td>price</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>This will be a link######################</td>
+            <td>dd/mm/yyyy</td>
+            <td>price</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>This will be a link######################</td>
+            <td>dd/mm/yyyy</td>
+            <td>price</td>
+          </tr>
+        </tbody>
+      </table>
+
+
+      <div class="show-more">
+        <%= link_to edit_user_registration_path do%>
+        <a href="#">Show all</a>
+        <% end %>
       </div>
     </div>
 
-    <%# button edit %>
-    <div class="edit-btn">
-      <% end %>
-      <%= link_to edit_user_registration_path do%>
-        <button class="btn btn-flat btn-primary">edit</button>
-      <% end %>
-    </div>
-
   </div>
-
 </div>
 
+<%# ---------------------apply the screen resolution thing to show and profile pages-------------------- %>
+
+<%# animated text %>
+<%#
+<div>Escape</div>
+<div>
+  <span>into amazing experiences</span>
+</div>
+
+
+<p>a css3 animation demo</p> %>
 
 
 
