--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -35,8 +35,8 @@
     </div>
   </div>
   <div class="form-actions">
-    <button type="button" class="btn btn-primary"><%= f.button :submit, "Sign up" %></button>
-    <button type="button render" class="btn btn-primary"><%= render "devise/shared/links" %></button>
+    <div class="button"><%= f.button :submit, "Sign up" %></div>
+    <div class="render"><%= render "devise/shared/links" %></div>
   </div>
 </div>
 
