--- a/app/views/yachts/show.html.erb
+++ b/app/views/yachts/show.html.erb
@@ -29,28 +29,19 @@
       <%# RESERVATION-BOX container %>
     <div class="bg-white rounded shadow" id="reservation-box">
 
-      <%# calendar %>
-      <div class="date">
-        <input type="date">
-      </div>
-      <span class="text-muted font-weight-bold"> <p class="mb-0 ">• price:  € <%= @yacht.price %>/ day</p> </span></strong>
-      <%# reservation button %>
-      <div class="space-button">
-        <a href="#" class="reservation-button btn btn-success">Reserve Now</a>
-      </div>
+
+    <%= simple_form_for [@yacht, @booking] do |f| %>
+    <span class="mb-0" style="font-weight:bold;">€<%= number_with_delimiter(@yacht.price, :delimiter => ',') %> per day</span>
+    <%= f.input :starts_at, as: :string, required: false, input_html: {class: "datepicker"} %>
+    <%= f.input :ends_at, as: :string, required: false, input_html: {class: "datepicker"} %>
+    <%= f.submit "Make Reservation", class: "btn btn-primary" %>
+<% end %>
 
     </div>
 
     <%# amenities and back button %>
     <div class="bg-white rounded shadow" id="amenities">
-      <ul>
-        <th>Amenities</th>
-        <li>a</li>
-        <li>a</li>
-        <li>a</li>
-        <li>a</li>
-        <li>a</li>
-      </ul>
+      Ammenities
       <div class="b-button">
       <%= link_to yachts_path, class: "back-button btn btn-primary" do  %>
         Back
@@ -64,6 +55,5 @@
   </div>
 
 </div>
-
 
 <%= render "footer" %>
