--- a/app/assets/stylesheets/yachts/_yacht.scss
+++ b/app/assets/stylesheets/yachts/_yacht.scss
@@ -1,8 +1,24 @@
 body{
   margin: 0;
   padding: 0;
-  background-color: white;
+  background: linear-gradient(-45deg, #fbfaff, #fbfbff, #f9fcff, #f2fffb);
+	background-size: 400% 400%;
+	animation: gradient 5s ease infinite;
 }
+
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
 
 .yacht-container{
   margin-top: 50px;
@@ -12,10 +28,11 @@ body{
 .page-title{
   text-align: left;
   margin-bottom: 50px;
+  font-family: Shippori Antique B1;
 }
 
 .card-title{
-  font-size: 13px;
+  font-size: 16px;
   font-weight: bold;
 }
 
@@ -40,17 +57,21 @@ body{
   border-radius: 8px;
   border: none;
   font-size: 12px;
-  box-shadow: 2px 2px 10px rgba($color: #eaeaea94, $alpha: 1.0);
-  height: 40vh;
-  overflow: hidden;;
+  height: 55vh;
+  overflow: hidden;
+  box-shadow: 0px 0px 5px rgb(216, 205, 255);
+}
+
+.card:hover{
+  box-shadow: 0px 0px 50px rgb(255, 255, 255);
+  transition: 0.5s;
 }
 
 .card-img-top{
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   object-fit: cover;
-  object-position: center;
-  height: 50%;
+  height: 260px;
 }
 
 .card-bottom{
@@ -60,12 +81,13 @@ body{
 
 .card-text{
   display: -webkit-box;
-  max-width: 200px;
+  max-width: 400px;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   margin-bottom: 0;
   text-overflow: ellipsis;
   overflow: hidden;
+  font-size: 14px;
 }
 
 // /* Style the video: 100% width and height to cover the entire window */
