--- a/app/views/yachts/index.html.erb
+++ b/app/views/yachts/index.html.erb
@@ -1,29 +1,38 @@
 <%# <%= video_tag "background_video_3.mp4", autoplay: :autoplay, loop: :loop, muted: :muted, class: "myVideo" %>
+<div class="d-flex flex-column justify-content-center w-100 h-100">
+
+	<div class="d-flex flex-column justify-content-center align-items-center">
+	</div>
+</div>
 
 <div class="yacht-container container-fluid">
 <h3 class="page-title">Discover all of our Yachts</h3>
 
 <div class="row justify-content-evenly">
     <% @yachts.each do |yacht| %>
-    <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+      <%= link_to yacht_path(yacht) do %>
+    <div class="col-12 col-md-6 col-lg-4">
       <div class="card">
           <img src="<%= yacht.image_url %>" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title"><%= link_to yacht.name, yacht_path(yacht) %></h5>
-            <p class="card-text"><strong>Description:</strong> <%= yacht.description %></p>
+            <p class="card-text"><strong style="color: #333333">Description:</strong> <%= yacht.description %></p>
             <div class="card-bottom d-flex justify-content-between">
-              <p class="card-text"><strong>Price per day: €</strong><%= yacht.price %></p>
-              <%= link_to yacht_path(yacht) do %>
-                <p class="card-button btn btn-primary">View</p>
-              <% end %>
+              <div class="card-bottom-info">
+              <p class="card-text"><strong style="color: #333333">Price per day: €</strong><%= number_with_delimiter(yacht.price, :delimiter => ',') %></p>
+              <p class="card-text"><strong style="color: #333333">Capacity: </strong><%= yacht.capacity %></p>
+            </div>
+              <div class="card-bottom-button">
+              <p class="btn btn-light home-card-button">View</p>
+              </div>
             </div>
           </div>
       </div>
       </div>
+              <% end %>
     <% end %>
   </div>
 </div>
 
 
 <%= render "footer" %>
-
