--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -39,47 +39,23 @@
       </div>
     </div>
 
-    <div class="card" id="user-history" style="overflow-y: scroll;">
-      <p> <strong>Your rental history: </strong></p>
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Reciept number</th>
-            <th scope="col">Date</th>
-            <th scope="col">Amount</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>This will be a link######################</td>
-            <td>dd/mm/yyyy</td>
-            <td>price</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>This will be a link######################</td>
-            <td>dd/mm/yyyy</td>
-            <td>price</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>This will be a link######################</td>
-            <td>dd/mm/yyyy</td>
-            <td>price</td>
-          </tr>
-        </tbody>
-      </table>
 
-
-      <div class="show-more">
-        <%= link_to edit_user_registration_path do%>
-        <a href="#">Show all</a>
-        <% end %>
-      </div>
+    <div>
+     <ul class="nav nav-tabs">
+  <li class="nav-item">
+    <a class="nav-link active" href="#">Active</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled">Disabled</a>
+  </li>
+</ul>
     </div>
-
   </div>
 </div>
 
