--- a/app/views/yachts/show.html.erb
+++ b/app/views/yachts/show.html.erb
@@ -33,7 +33,7 @@
       <div class="date">
         <input type="date">
       </div>
-      <span class="text-muted font-weight-bold"> <p class="mb-0 ">• price:  € <%= @yacht.price %>/ day</p> </span></strong>
+      <span class="text-muted font-weight-bold"> <p class="mb-0 "> price:  € <%= @yacht.price %> / day</p> </span></strong>
       <%# reservation button %>
       <div class="space-button">
         <a href="#" class="reservation-button btn btn-success">Reserve Now</a>
