--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -1,9 +1,5 @@
 // containers
-// MAIN CONTAINER
 
-#profile {
-
-}
 // container of info and history
 .page {
   background-color: white;
@@ -11,7 +7,6 @@
   inline-size: auto;
   justify-content: space-around;
 }
-
 // CARD CONTAINER
 #user-details {
   padding: 20px;
@@ -32,13 +27,27 @@
 #user-history p {
   font-size: 16px;
 }
+// RESERVATION CONTAINER
+#user-reservation {
+  background-color: white;
+  position: relative;
+  padding: 40px;
+  display: inline-block;
+  font-size: 16px;
+  margin-left: 20px;
+
+}
+// TABLES CONTAINER
+.tab {
+  background-color: blue;
+}
 // header
 .page-head {
   margin-top: 40px;
   margin-bottom: 40px;
   padding-left: 50px;
 }
-
+// buttons
 .edit-btn {
   margin-top: 24px;
 }
@@ -70,6 +79,44 @@ table {
 .amount-row {
   width: 100px;
   text-align: right;
+}
+
+
+// tab
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
 }
 
 
