--- a/app/views/yachts/index.html.erb
+++ b/app/views/yachts/index.html.erb
@@ -1,10 +1,3 @@
-<%# <%= video_tag "background_video_3.mp4", autoplay: :autoplay, loop: :loop, muted: :muted, class: "myVideo" %>
-<div class="d-flex flex-column justify-content-center w-100 h-100">
-
-	<div class="d-flex flex-column justify-content-center align-items-center">
-	</div>
-</div>
-
 <div class="yacht-container container-fluid">
 <h3 class="page-title">Discover all of our Yachts</h3>
 
@@ -23,7 +16,10 @@
               <p class="card-text"><strong style="color: #333333">Capacity: </strong><%= yacht.capacity %></p>
             </div>
               <div class="card-bottom-button">
-              <p class="btn btn-light home-card-button">View</p>
+              <%= link_to yacht_path(yacht) do %>
+              <p class="btn btn-light index-card-button">View</p>
+                            <% end %>
+
               </div>
             </div>
           </div>
