status added on profile

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -39,29 +39,6 @@
       </div>
     </div>
 
-
-    <div>
-     <ul class="nav nav-tabs">
-  <li class="nav-item">
-    <a class="nav-link active" href="#">Active</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link disabled">Disabled</a>
-  </li>
-</ul>
-    </div>
-  </div>
-</div>
-
-
-<%# comment %>
-
     <div class="tab">
       <%# upcoming reservation card %>
       <div class="card" id="user-reservation" style="overflow-y: scroll;">
@@ -72,6 +49,7 @@
               <th scope="col"> Yacht </th>
               <th scope="col"> mm/dd/yyyy </th>
               <th scope="col"> Price </th>
+              <th scope="col"> Status </th>
             </tr>
           </thead>
           <tbody>
@@ -80,6 +58,7 @@
               <td scope="col"> <%= @yachts.select { |yacht| yacht.id == booking.yacht_id}[0].name %> </td>
               <td scope="col"><%= booking.starts_at %> </td>
               <td scope="col"> € <%= number_with_delimiter(@yachts.select { |yacht| yacht.id == booking.yacht_id}[0].price, :delimiter => ',')  %> </td>
+              <td scope="col"><%= booking.status %> </td>
               </tr>
               <%end%>
 
@@ -87,8 +66,15 @@
         </table>
       </div>
 
+  </div>
+</div>
+
+
+<%# comment %>
+
+
       <%# history card %>
-      <div class="card" id="user-history" style="overflow-y: scroll;">
+      <%# <div class="card" id="user-history" style="overflow-y: scroll;">
         <p> <strong>Your rental history: </strong></p>
         <table class="table table-hover">
           <thead>
@@ -108,17 +94,17 @@
             </tr>
 
           </tbody>
-        </table>
+        </table> %>
 
-
+<%#
         <div class="show-more">
           <%= link_to edit_user_registration_path do%>
-          <a href="#">Show all</a>
-          <% end %>
-        </div>
-      </div>
+          <%# <a href="#">Show all</a> %>
+          <%# <% end %>
+        <%# </div> %>
+      <%# </div> %>
 
-    </div>
+    <%# </div> %>
 
 <%# ---------------------apply the screen resolution thing to show and profile pages-------------------- %>
 
