--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -18,13 +18,14 @@
 
 <%# main container %>
 <div class="profile-container " id="profile">
-  <h2 class="page-head">Welcome <strong><%= @user.first_name.capitalize %></strong> to your profile</h2>
+  <h2 class="page-head">Welcome <strong><%= @user.first_name.capitalize %></strong> </h2>
   <%# card container %>
 
   <div class="page">
     <div class="col-12 col-md-6 col-lg-4 col-xl-3">
       <div class="card" id="user-details">
         <div class="card-body">
+          <p> <strong>Personal information</strong> </p>
           <p class="card-text">First Name:  <%= @user.first_name %></p>
           <p class="card-text">Last Name: <%= @user.last_name %></p>
           <p class="card-text">Email: <%= @user.email %></p>
@@ -32,39 +33,39 @@
           <%# button edit %>
           <div class="edit-btn">
             <%= link_to edit_user_registration_path do%>
-            <button class="btn btn-flat btn-primary">edit</button>
+            <button class="btn btn-light index-card-button">edit</button>
             <% end %>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="tab">
-      <%# upcoming reservation card %>
-      <div class="card" id="user-reservation" style="overflow-y: scroll;">
-        <p> <strong>My Reservations </strong></p>
-        <table class="table table-hover">
-          <thead>
-            <tr>
-              <th scope="col"> Yacht </th>
-              <th scope="col"> mm/dd/yyyy </th>
-              <th scope="col"> Price </th>
-              <th scope="col"> Status </th>
-            </tr>
-          </thead>
-          <tbody>
-             <% @user_bookings.each do |booking|%>
-             <tr>
-              <td scope="col"> <%= @yachts.select { |yacht| yacht.id == booking.yacht_id}[0].name %> </td>
-              <td scope="col"><%= booking.starts_at %> </td>
-              <td scope="col"> € <%= number_with_delimiter(@yachts.select { |yacht| yacht.id == booking.yacht_id}[0].price, :delimiter => ',')  %> </td>
-              <td scope="col"><%= booking.status %> </td>
-              </tr>
-              <%end%>
 
-          </tbody>
-        </table>
-      </div>
+    <%# upcoming reservation card %>
+    <div class="card" id="user-reservation" style="overflow-y: scroll;">
+      <p> <strong>My Reservations </strong></p>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col"> Yacht </th>
+            <th scope="col"> Date</th>
+            <th scope="col"> Price </th>
+            <th scope="col"> Status </th>
+          </tr>
+        </thead>
+        <tbody>
+            <% @user_bookings.each do |booking|%>
+            <tr>
+            <td scope="col"> <%= @yachts.select { |yacht| yacht.id == booking.yacht_id}[0].name %> </td>
+            <td scope="col"><%= booking.starts_at %> </td>
+            <td scope="col"> € <%= number_with_delimiter(@yachts.select { |yacht| yacht.id == booking.yacht_id}[0].price, :delimiter => ',')  %> </td>
+            <td scope="col"><%= booking.status %> </td>
+            </tr>
+            <%end%>
+
+        </tbody>
+      </table>
+    </div>
 
   </div>
 </div>
