--- a/app/views/yachts/show.html.erb
+++ b/app/views/yachts/show.html.erb
@@ -32,9 +32,9 @@
         <h4>Ammenities</h4>
         <div class="ammenities-body">
         <ul class="list-group ammenities-text">
-          <li class="list-group-item card-text"><strong style="color: #333333">WIFI: €</strong><%= number_with_delimiter(@yacht.price, :delimiter => ',') %></li>
-          <li class="list-group-item card-text"><strong style="color: #333333">Pool: </strong><%= @yacht.capacity %></li>
-          <li class="list-group-item card-text"><strong style="color: #333333">Jacuzzy:</strong> <%= @yacht.description %></li>
+          <li class="list-group-item card-text"><strong style="color: #333333">WIFI</strong></li>
+          <li class="list-group-item card-text"><strong style="color: #333333">Pool</strong></li>
+          <li class="list-group-item card-text"><strong style="color: #333333">Jacuzzy</strong></li>
         </ul>
       </div>
       </div>
